--- a/app/src/main/res/layout/main_menu_page.xml
+++ b/app/src/main/res/layout/main_menu_page.xml
@@ -254,7 +254,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:background="@drawable/home_icon"/>
+                android:background="@drawable/home_icon_clicked"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -291,7 +291,8 @@
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:background="@drawable/search_icon"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_marginRight="20dp"
+                    app:tint="#51A8A6"/>
 
                 <TextView
                     android:layout_width="match_parent"
