--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Login_Activity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/main"
@@ -128,6 +128,7 @@
 
 
         <Button
+            android:id="@+id/login_button"
             android:layout_width="180dp"
             android:layout_height="40dp"
             android:layout_below="@id/Password"
@@ -157,7 +158,7 @@
             android:id="@+id/sign_up_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
+            android:text="@string/sign_up"
             android:textColor="#157177"
 
             android:textSize="14sp"
