--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DEF8F8"
-    tools:context=".MainActivity">
+    tools:context=".Main_Profile_Activity">
 
 
     <RelativeLayout
