--- a/app/src/main/res/layout/reset_password_page.xml
+++ b/app/src/main/res/layout/reset_password_page.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Reset_Pass_Activity"
     android:background="#DEF8F8"
     android:id="@+id/main_view">
 
