--- a/app/src/main/res/layout/main_menu_page.xml
+++ b/app/src/main/res/layout/main_menu_page.xml
@@ -69,11 +69,6 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_below="@+id/Greetings"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"></LinearLayout>
-
     <FrameLayout
 
         android:id="@+id/main_opt"
@@ -211,27 +206,46 @@
         </TextView>
 
     </FrameLayout>
+<LinearLayout
+    android:layout_marginTop="40dp"
+    android:layout_below="@+id/Greetings"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:weightSum="3"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Top Mentors for you"
-        android:textColor="#244A47"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="190dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View all"
-        android:textColor="#244A47"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="192dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="3">
+
+        <TextView
+            android:layout_width="330dp"
+            android:layout_height="match_parent"
+            android:text="Top Mentors for you"
+            android:paddingLeft="10dp"
+            android:textColor="#244A47"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:gravity="center"
+            android:text="View all"
+            android:textColor="#244A47"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
 
 
 
