--- a/app/src/main/res/layout/reset_password_page.xml
+++ b/app/src/main/res/layout/reset_password_page.xml
@@ -8,14 +8,15 @@
     android:background="#DEF8F8"
     android:id="@+id/main_view">
 
-    <ImageView
+    <TextView
+        android:id="@+id/back_to_login"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="40dp"
         android:layout_marginLeft="40dp"
-        android:src="@drawable/back_arrow"
+        android:background="@drawable/back_arrow"
 
         />
 
@@ -125,9 +126,10 @@ password. Type something you will remember!"
         />
 
     <TextView
+        android:id="@+id/back_to_login_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/log_in"
         android:textSize="15sp"
         android:textStyle="bold"
         android:textColor="#157177"
