--- a/app/src/main/res/layout/registration_page.xml
+++ b/app/src/main/res/layout/registration_page.xml
@@ -251,6 +251,7 @@
 
 
         <Button
+            android:id="@+id/Sign_up_btn"
             android:layout_width="180dp"
             android:layout_height="40dp"
             android:layout_below="@id/Password"
@@ -276,10 +277,10 @@
 
         <TextView
 
-            android:id="@+id/sign_up_link"
+            android:id="@+id/log_in_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Log in"
+            android:text="@string/log_in"
             android:textColor="#157177"
             android:textSize="14sp"
             android:layout_alignParentBottom="true"
