--- a/app/src/main/res/layout/resume_page.xml
+++ b/app/src/main/res/layout/resume_page.xml
@@ -8,30 +8,30 @@
     tools:context=".Main_Profile_Activity">
 
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/header_top"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
         android:background="#50C2C9"
         android:layout_alignBot="@+id/display_cover">
 
-
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/back_to_search_results"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#147076"
-            android:layout_marginLeft="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center_vertical"
             android:drawableLeft="@drawable/back_arrow"
             />
 
+    </LinearLayout>
 
-    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/header_top"
         android:layout_marginTop="-5sp"
         android:id="@+id/display_cover"
@@ -46,7 +46,7 @@
             android:layout_weight="1"
             android:orientation="horizontal"
             android:weightSum="3"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             >
 
             <TextView
@@ -62,6 +62,7 @@
                 android:layout_marginLeft="10dp"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
+
                 android:id="@+id/display_pic"
                 android:layout_weight="1"
                 android:layout_width="120dp"
@@ -69,7 +70,7 @@
                 app:civ_border_color="#7FD9D3"
                 app:civ_border_width="5dp"
                 android:layout_gravity="end"
-                android:src="#000000"
+                android:src="@drawable/john1"
                 />
 
         </LinearLayout>
@@ -132,7 +133,7 @@
             android:textStyle="bold"
             android:text="About me "
             android:layout_marginLeft="10dp"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:textColor="#FFFFFF"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
@@ -158,146 +159,150 @@ principles and user experience"
 
     </LinearLayout>
 
-,
-    <RelativeLayout
-        android:layout_below="@+id/display_cover"
+    <LinearLayout
+        android:layout_below="@id/display_cover"
         android:id="@+id/Greetings"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="My Expertise Include"
-            android:layout_alignLeft="@+id/leadership_btn"
-            android:layout_alignBottom="@+id/career_btn"
-            android:layout_marginBottom="60dp"
             android:textColor="#157177"
             android:textSize="20sp"
-            android:textStyle="bold"/>
-
-
-
-        <TextView
-            android:id="@+id/leadership_btn"
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/book_session"
-            android:layout_alignBottom="@+id/review_btn"
-            android:layout_marginBottom="80dp"
-            android:text="Leadership"
-            android:textAlignment="center"
-            android:paddingVertical="7dp"
-            android:paddingHorizontal="5dp"
-            android:textSize="15sp"
             android:textStyle="bold"
-            android:background="@drawable/blue_box"
-            android:textColor="#FFFFFF"/>
+            android:layout_marginVertical="10dp"
+            android:layout_marginLeft="10dp"/>
 
-
-        <TextView
-            android:id="@+id/prototyping_btn"
-            android:layout_toRightOf="@+id/leadership_btn"
-            android:layout_width="140dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/review_btn"
-            android:layout_marginBottom="80dp"
-            android:text="Prototyping"
-            android:textAlignment="center"
-            android:layout_marginLeft="15dp"
-            android:paddingVertical="7dp"
-            android:paddingHorizontal="5dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
+            android:weightSum="3"
+            android:orientation="horizontal">
 
-            android:background="@drawable/blue_box"
-            android:textColor="#FFFFFF"/>
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:layout_marginBottom="10dp"
+                android:id="@+id/leadership_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Leadership"
+                android:textAlignment="center"
+                android:paddingVertical="7dp"
+                android:paddingHorizontal="5dp"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:background="@drawable/blue_box"
+                android:textColor="#FFFFFF"/>
 
+            <TextView
+                android:id="@+id/prototyping_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Prototyping"
+                android:textAlignment="center"
+                android:layout_marginStart="15dp"
+                android:paddingVertical="7dp"
+                android:paddingHorizontal="5dp"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:background="@drawable/blue_box"
+                android:textColor="#FFFFFF"/>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/career_btn"
-            android:layout_width="140dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/book_session"
-            android:layout_alignEnd="@+id/leadership_btn"
-            android:layout_alignBottom="@+id/leadership_btn"
-            android:layout_marginBottom="60dp"
-            android:text="Career Advice"
-            android:textAlignment="center"
-            android:paddingVertical="7dp"
-            android:paddingHorizontal="5dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:background="@drawable/blue_box"
-            android:textColor="#FFFFFF"/>
+            android:weightSum="2"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="190dp"
+            <TextView
+                android:id="@+id/career_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Career Advice"
+                android:textAlignment="center"
+                android:paddingVertical="7dp"
+                android:paddingHorizontal="5dp"
+                android:layout_marginHorizontal="20dp"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:background="@drawable/blue_box"
+                android:textColor="#FFFFFF"/>
+
+            <TextView
+                android:layout_marginRight="5dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="User Experience Design"
+                android:textAlignment="center"
+                android:paddingVertical="7dp"
+                android:paddingHorizontal="5dp"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:background="@drawable/blue_box"
+                android:textColor="#FFFFFF"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/career_btn"
-            android:layout_toRightOf="@+id/career_btn"
-            android:layout_marginLeft="15dp"
-            android:text="User Experience Design"
-            android:textAlignment="center"
-            android:paddingVertical="7dp"
-            android:paddingHorizontal="5dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:background="@drawable/blue_box"
-            android:textColor="#FFFFFF"/>
+            android:orientation="horizontal">
 
+            <Button
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:paddingRight="10dp"
+                android:id="@+id/review_btn"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="Drop a Review"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="#157177"
+                android:background="@drawable/yellow_box"
+                android:drawableRight="@drawable/review_icon_yellow"/>
 
+            <Button
+                android:layout_marginTop="20dp"
+                android:paddingRight="10dp"
+                android:layout_marginHorizontal="20dp"
+                android:id="@+id/join_community"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="Join Community"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="#157177"
+                android:background="@drawable/yellow_box"
+                android:drawableRight="@drawable/people_icon"/>
+        </LinearLayout>
 
         <Button
-            android:id="@+id/review_btn"
-            android:layout_align="@+id/book_session"
-            android:layout_alignLeft="@+id/book_session"
-            android:layout_alignBottom="@+id/book_session"
-            android:layout_marginBottom="70dp"
-            android:layout_width="170dp"
-            android:layout_height="40dp"
-            android:paddingRight="5dp"
-            android:text="Drop a Review"
-            android:textAllCaps="false"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="#157177"
-            android:background="@drawable/yellow_box"
-            android:drawableRight="@drawable/review_icon_yellow"/>
 
-        <Button
-            android:id="@+id/join_community"
-            android:layout_alignRight="@+id/book_session"
-            android:layout_width="180dp"
-            android:layout_height="40dp"
-            android:layout_alignBottom="@+id/book_session"
-            android:layout_marginBottom="70dp"
-            android:text="Join Community"
-            android:textAllCaps="false"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="#157177"
-            android:background="@drawable/yellow_box"
-            android:drawableRight="@drawable/people_icon"/>
-
-        <Button
             android:id="@+id/book_session"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="70dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="60dp"
             android:text="Book a Session"
             android:textAllCaps="false"
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="#FFFFFF"
-            android:background="@drawable/dark_green_box" />
-
-    </RelativeLayout>
-
+            android:background="@drawable/dark_green_box"/>
+    </LinearLayout>
 
 
 </RelativeLayout>
