--- a/app/src/main/res/layout/add_mentor_page.xml
+++ b/app/src/main/res/layout/add_mentor_page.xml
@@ -21,46 +21,42 @@
         android:alpha="0.7"
         android:src="#A2E6DF" />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/search_div"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/back_arrow"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/back_arrow"
-            android:layout_alignParentLeft="true"
             android:layout_marginTop="80dp"
-            android:layout_marginLeft="30dp"
-            android:layout_alignParentTop="true"/>
+            android:layout_marginLeft="30dp"/>
 
         <TextView
-            android:layout_toRightOf="@+id/back_arrow"
-
             android:id="@+id/Notifications"
+            android:paddingLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="  Add New Mentor"
-            android:layout_marginRight="30dp"
             android:textStyle="bold"
             android:textSize="27sp"
             android:textColor="#157177"
-            android:layout_marginTop="100dp"
-            />
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="30dp"/>
 
         <TextView
-            android:layout_alignRight="@+id/Notifications"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="  Help us expand!"
             android:textSize="15sp"
             android:textColor="#157177"
-            android:layout_marginTop="140dp"
-            />
+            android:layout_marginLeft="150dp"/>
 
-    </RelativeLayout>
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -255,7 +251,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/home_icon_clicked"/>
+                    android:background="@drawable/home_icon"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -264,7 +260,7 @@
                     android:textSize="13sp"
                     android:layout_gravity="bottom|center_horizontal"
                     android:textAlignment="center"
-                    android:textColor="#DDF7F7"
+                    android:textColor="#51A8A6"
                     android:layout_marginTop="8dp"
                     android:clickable="false"/>
             </FrameLayout>
