--- a/app/src/main/res/layout/edit_profile_page.xml
+++ b/app/src/main/res/layout/edit_profile_page.xml
@@ -33,14 +33,13 @@
 
 
 
-
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/login_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/header"
+        android:orientation="vertical"
         android:background="#DDF7F7">
-
 
         <TextView
             android:id="@+id/name_text"
@@ -53,27 +52,23 @@
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
 
-
         <EditText
             android:id="@+id/Name"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/name_text"
             android:background="@drawable/white_box"
             android:hint="Ali"
             android:textColorHint="#918B8B"
             android:paddingLeft="20dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
         <TextView
             android:id="@+id/email_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Name"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:textStyle="bold"
@@ -82,27 +77,23 @@
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
 
-
         <EditText
             android:id="@+id/Email"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/email_text"
             android:background="@drawable/white_box"
             android:hint="ali@gmail.com"
             android:textColorHint="#918B8B"
             android:paddingLeft="20dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
         <TextView
             android:id="@+id/contact_no_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Email"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:text="Contact Number"
@@ -111,37 +102,31 @@
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
 
-
         <EditText
             android:id="@+id/Contact_No"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/contact_no_text"
             android:background="@drawable/white_box"
             android:hint=" +92 321 2242022"
             android:textStyle="bold"
             android:textColorHint="#918B8B"
             android:paddingLeft="20dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
         <TextView
             android:id="@+id/country_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Contact_No"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:text="Country"
             android:textStyle="bold"
-
             android:textColor="#147076"
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
-
 
         <EditText
             android:id="@+id/Country"
@@ -149,7 +134,6 @@
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/country_text"
             android:background="@drawable/white_box"
             android:hint="Pakistan"
             android:textColorHint="#918B8B"
@@ -157,14 +141,12 @@
             android:drawableRight="@drawable/dropdown_arrow"
             android:paddingRight="10dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
         <TextView
             android:id="@+id/city_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Country"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:text="City"
@@ -173,14 +155,12 @@
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
 
-
         <EditText
             android:id="@+id/City"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/city_text"
             android:background="@drawable/white_box"
             android:drawableRight="@drawable/dropdown_arrow"
             android:paddingRight="10dp"
@@ -188,35 +168,31 @@
             android:textColorHint="#918B8B"
             android:paddingLeft="20dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
-
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginBottom="50dp"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
             android:layout_marginHorizontal="30dp"
-            android:layout_alignParentBottom="true"
             android:text="Update Profile"
             android:textSize="16dp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             android:background="@drawable/dark_green_box"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="190dp"
+        android:layout_height="130dp"
         app:civ_border_color="#147076"
         android:layout_centerHorizontal="true"
         android:layout_alignTop="@+id/login_bar"
-        android:src="#000000"
-        android:layout_marginTop="-45dp"
+        android:src="@drawable/profile_page"
+        android:layout_marginTop="-65dp"
         />
 
 
