--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -157,6 +157,451 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/Msg_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/Greetings">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Favourite Mentors"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#157177"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/mentors_tab"
+        android:layout_below="@+id/Msg_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="160dp"
+        android:layout_height="170dp"
+        android:textColor="@color/black"
+        android:layout_marginLeft="5dp"
+        android:layout_gravity=""
+        android:background="@drawable/grey_box">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="5"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/white_box">
+
+            <!-- Content inside the white box -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="John Cooper
+"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:paddingTop="5dp"
+                    android:paddingLeft="7dp"/>
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" UX Designer @ Google"
+                android:textColor="@color/black"
+                android:textSize="8sp"
+                android:textStyle="bold"
+                android:textAlignment="gravity"
+                android:paddingLeft="8dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="  Available"
+                android:textColor="#3EAD00"
+                android:textSize="10sp"
+                android:gravity="center_vertical"
+                android:paddingLeft="8dp"
+                android:paddingBottom="3dp"
+                android:drawableLeft="@drawable/green_cricle"
+                android:drawableRight="@drawable/heart"
+                android:paddingRight="15dp"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="160dp"
+        android:layout_height="170dp"
+        android:textColor="@color/black"
+        android:layout_marginLeft="5dp"
+        android:layout_gravity=""
+        android:background="@drawable/grey_box">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="5"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/white_box">
+
+            <!-- Content inside the white box -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Emma Phillips
+"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:paddingTop="5dp"
+                    android:paddingLeft="7dp"/>
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="  Lead - Technology Officer"
+                android:textColor="@color/black"
+                android:textSize="8sp"
+                android:textStyle="bold"
+                android:textAlignment="gravity"
+                android:paddingLeft="8dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="  Available"
+                android:textColor="#3EAD00"
+                android:textSize="10sp"
+                android:gravity="center_vertical"
+                android:paddingLeft="8dp"
+                android:paddingBottom="3dp"
+                android:drawableLeft="@drawable/green_cricle"
+                android:drawableRight="@drawable/heart"
+                android:paddingRight="15dp"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="160dp"
+        android:layout_height="170dp"
+        android:textColor="@color/black"
+        android:layout_marginLeft="5dp"
+        android:layout_gravity=""
+        android:background="@drawable/grey_box">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="5"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/white_box">
+
+            <!-- Content inside the white box -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Micheal
+"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:paddingTop="5dp"
+                    android:paddingLeft="7dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=" $500/Session"
+                    android:paddingRight="10dp"
+                    android:textStyle="bold"
+                    android:textAlignment="textEnd"
+                    android:textSize="8sp"
+                    android:textColor="#EBB800"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" NLP Expert"
+                android:textColor="@color/black"
+                android:textSize="8sp"
+                android:textStyle="bold"
+                android:textAlignment="gravity"
+                android:paddingLeft="8dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="  Available"
+                android:textColor="#3EAD00"
+                android:textSize="10sp"
+                android:gravity="center_vertical"
+                android:paddingLeft="8dp"
+                android:paddingBottom="3dp"
+                android:drawableLeft="@drawable/green_cricle"
+                android:drawableRight="@drawable/heart"
+                android:paddingRight="15dp"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    </LinearLayout>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/Msg_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/mentors_tab">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Reviews"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#157177"/>
+
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/review_tab"
+        android:layout_below="@+id/Msg_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:weightSum="5"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:background="@drawable/blue_box">
+
+                    <!-- Content inside the white box -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="John Cooper
+"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:paddingTop="5dp"
+                            android:paddingLeft="7dp"/>
+
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=" UX Designer @ Google"
+                        android:textColor="@color/black"
+                        android:textSize="8sp"
+                        android:textStyle="bold"
+                        android:textAlignment="gravity"
+                        android:paddingLeft="8dp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="  Available"
+                        android:textColor="#3EAD00"
+                        android:textSize="10sp"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="8dp"
+                        android:paddingBottom="3dp"
+                        android:drawableLeft="@drawable/green_cricle"
+                        android:drawableRight="@drawable/heart"
+                        android:paddingRight="15dp"/>
+                </LinearLayout>
+            <LinearLayout
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:weightSum="5"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:background="@drawable/blue_box">
+
+                    <!-- Content inside the white box -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="John Cooper
+"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:paddingTop="5dp"
+                            android:paddingLeft="7dp"/>
+
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=" UX Designer @ Google"
+                        android:textColor="@color/black"
+                        android:textSize="8sp"
+                        android:textStyle="bold"
+                        android:textAlignment="gravity"
+                        android:paddingLeft="8dp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="  Available"
+                        android:textColor="#3EAD00"
+                        android:textSize="10sp"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="8dp"
+                        android:paddingBottom="3dp"
+                        android:drawableLeft="@drawable/green_cricle"
+                        android:drawableRight="@drawable/heart"
+                        android:paddingRight="15dp"/>
+                </LinearLayout>
+            <LinearLayout
+                    android:layout_width="150dp"
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:weightSum="5"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:background="@drawable/blue_box">
+
+                    <!-- Content inside the white box -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="John Cooper
+"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:paddingTop="5dp"
+                            android:paddingLeft="7dp"/>
+
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=" UX Designer @ Google"
+                        android:textColor="@color/black"
+                        android:textSize="8sp"
+                        android:textStyle="bold"
+                        android:textAlignment="gravity"
+                        android:paddingLeft="8dp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="  Available"
+                        android:textColor="#3EAD00"
+                        android:textSize="10sp"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="8dp"
+                        android:paddingBottom="3dp"
+                        android:drawableLeft="@drawable/green_cricle"
+                        android:drawableRight="@drawable/heart"
+                        android:paddingRight="15dp"/>
+                </LinearLayout>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
@@ -357,7 +802,7 @@
         app:civ_border_color="#147076"
         android:layout_alignTop="@+id/Greetings"
         android:layout_marginLeft="30dp"
-        android:src="#000000"
+        android:src="@drawable/profile_page"
         android:layout_marginTop="-50dp"
         />
 
