--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -427,7 +427,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="3"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -436,164 +436,211 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    android:orientation="vertical"
-                    android:weightSum="5"
-                    android:layout_gravity="bottom"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:background="@drawable/blue_box">
+                android:layout_width="140dp"
+                android:layout_height="120dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="5dp"
+                android:orientation="vertical"
+                android:background="@drawable/blue_box">
 
-                    <!-- Content inside the white box -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:text="John Cooper"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="John Cooper
-"
-                            android:textColor="@color/black"
-                            android:textSize="16sp"
-                            android:textStyle="bold"
-                            android:paddingTop="5dp"
-                            android:paddingLeft="7dp"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
 
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=" UX Designer @ Google"
-                        android:textColor="@color/black"
-                        android:textSize="8sp"
-                        android:textStyle="bold"
-                        android:textAlignment="gravity"
-                        android:paddingLeft="8dp"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="  Available"
-                        android:textColor="#3EAD00"
-                        android:textSize="10sp"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="8dp"
-                        android:paddingBottom="3dp"
-                        android:drawableLeft="@drawable/green_cricle"
-                        android:drawableRight="@drawable/heart"
-                        android:paddingRight="15dp"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star_unfilled"/>
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:text="John provided excellent\nprototyping techniques\nand insights. I highly\nrecommend him!"
+                    android:textSize="8sp"
+                    android:textColour="#FFFFFF"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
             <LinearLayout
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    android:orientation="vertical"
-                    android:weightSum="5"
-                    android:layout_gravity="bottom"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:background="@drawable/blue_box">
+                android:layout_width="140dp"
+                android:layout_height="120dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="5dp"
+                android:orientation="vertical"
+                android:background="@drawable/blue_box">
 
-                    <!-- Content inside the white box -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:text="Emma Phillips"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="John Cooper
-"
-                            android:textColor="@color/black"
-                            android:textSize="16sp"
-                            android:textStyle="bold"
-                            android:paddingTop="5dp"
-                            android:paddingLeft="7dp"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
 
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=" UX Designer @ Google"
-                        android:textColor="@color/black"
-                        android:textSize="8sp"
-                        android:textStyle="bold"
-                        android:textAlignment="gravity"
-                        android:paddingLeft="8dp"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="  Available"
-                        android:textColor="#3EAD00"
-                        android:textSize="10sp"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="8dp"
-                        android:paddingBottom="3dp"
-                        android:drawableLeft="@drawable/green_cricle"
-                        android:drawableRight="@drawable/heart"
-                        android:paddingRight="15dp"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star_unfilled"/>
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginHorizontal="15dp"
+                    android:text=" Her tips were valuable.
+Would love to connect
+again."
+                    android:textSize="8sp"
+                    android:textColour="#FFFFFF"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
             <LinearLayout
-                    android:layout_width="150dp"
-                    android:layout_height="120dp"
-                    android:orientation="vertical"
-                    android:weightSum="5"
-                    android:layout_gravity="bottom"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:background="@drawable/blue_box">
+                android:layout_width="140dp"
+                android:layout_height="120dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="5dp"
+                android:orientation="vertical"
+                android:background="@drawable/blue_box">
 
-                    <!-- Content inside the white box -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:text="Jane"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="John Cooper
-"
-                            android:textColor="@color/black"
-                            android:textSize="16sp"
-                            android:textStyle="bold"
-                            android:paddingTop="5dp"
-                            android:paddingLeft="7dp"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
 
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text=" UX Designer @ Google"
-                        android:textColor="@color/black"
-                        android:textSize="8sp"
-                        android:textStyle="bold"
-                        android:textAlignment="gravity"
-                        android:paddingLeft="8dp"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="  Available"
-                        android:textColor="#3EAD00"
-                        android:textSize="10sp"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="8dp"
-                        android:paddingBottom="3dp"
-                        android:drawableLeft="@drawable/green_cricle"
-                        android:drawableRight="@drawable/heart"
-                        android:paddingRight="15dp"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star"/>
+                    <Button
+                        android:layout_marginHorizontal="1dp"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/gold_star_unfilled"/>
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:text=" Impressive session."
+                    android:textSize="8sp"
+                    android:textColour="#FFFFFF"/>
+
+            </LinearLayout>
 
 
         </LinearLayout>
