--- a/app/src/main/res/layout/registration_page.xml
+++ b/app/src/main/res/layout/registration_page.xml
@@ -38,15 +38,13 @@
     </RelativeLayout>
 
 
-
-
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/login_bar"
         android:layout_width="match_parent"
+        android:layout_below="@+id/header"
         android:layout_height="match_parent"
-        android:layout_below="@id/header"
+        android:orientation="vertical"
         android:background="@drawable/blue_box">
-
 
         <TextView
             android:id="@+id/Starting_text"
@@ -63,7 +61,6 @@
         <TextView
             android:id="@+id/name_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Starting_text"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:text="Name"
@@ -72,35 +69,30 @@
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
 
-
         <EditText
             android:id="@+id/Name"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/name_text"
             android:background="@drawable/white_box"
             android:hint="Enter Name"
             android:textColorHint="#918B8B"
             android:paddingLeft="20dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
         <TextView
             android:id="@+id/email_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Name"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="25dp"
             android:text="Email"
             android:textColor="@android:color/white"
             android:background="#50C2C9"
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
-
 
         <EditText
             android:id="@+id/Email"
@@ -108,28 +100,24 @@
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/email_text"
             android:background="@drawable/white_box"
             android:hint="Enter Email"
             android:textColorHint="#918B8B"
             android:paddingLeft="20dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
         <TextView
             android:id="@+id/contact_no_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Email"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="25dp"
             android:text="Contact Number"
             android:textColor="@android:color/white"
             android:background="#50C2C9"
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
-
 
         <EditText
             android:id="@+id/Contact_No"
@@ -137,28 +125,24 @@
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/contact_no_text"
             android:background="@drawable/white_box"
             android:hint="Enter Contact Number"
             android:textColorHint="#918B8B"
             android:paddingLeft="20dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
         <TextView
             android:id="@+id/country_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Contact_No"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="25dp"
             android:text="Country"
             android:textColor="@android:color/white"
             android:background="#50C2C9"
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
-
 
         <EditText
             android:id="@+id/Country"
@@ -166,7 +150,6 @@
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/country_text"
             android:background="@drawable/white_box"
             android:hint="Select Country"
             android:textColorHint="#918B8B"
@@ -174,22 +157,19 @@
             android:drawableRight="@drawable/dropdown_arrow"
             android:paddingRight="10dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
         <TextView
             android:id="@+id/city_text"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/Country"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:text="City"
+            android:layout_marginTop="25dp"
+            android:text="Country"
             android:textColor="@android:color/white"
             android:background="#50C2C9"
             android:textSize="15sp"
             android:layout_marginLeft="25dp"/>
-
 
         <EditText
             android:id="@+id/City"
@@ -197,99 +177,57 @@
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_below="@id/city_text"
             android:background="@drawable/white_box"
-            android:drawableRight="@drawable/dropdown_arrow"
-            android:paddingRight="10dp"
             android:hint="Select City"
             android:textColorHint="#918B8B"
             android:paddingLeft="20dp"
+            android:drawableRight="@drawable/dropdown_arrow"
+            android:paddingRight="10dp"
             android:inputType="text"
-            android:layout_alignLeftOf="@+id/email_text"
             android:textColor="#FFFFFF"
             android:backgroundTint="#FFFFFF" />
 
 
-
-        <TextView
-            android:id="@+id/pass_text"
-            android:layout_width="wrap_content"
-            android:layout_below="@+id/City"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Password"
-            android:textColor="@android:color/white"
-            android:textSize="15sp"
-            android:layout_marginLeft="25dp"/>
-
-        <EditText
-            android:id="@+id/Password"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_below="@id/pass_text"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="25dp"
-            android:background="@drawable/white_box"
-            android:hint="Enter your password"
-            android:textColorHint="#918B8B"
-            android:paddingLeft="20dp"
-            android:textColor="#FFFFFF"
-            android:inputType="textPassword"
-            android:backgroundTint="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/forgot_text"
-            android:layout_width="wrap_content"
-            android:layout_below="@+id/Password"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="Password must be at least 8 characters long"
-            android:textColor="@android:color/white"
-            android:textSize="13sp"
-            android:layout_alignLeft="@+id/Password"
-            />
-
+        <!-- Repeat similar blocks for other fields -->
 
         <Button
             android:id="@+id/Sign_up_btn"
             android:layout_width="180dp"
             android:layout_height="40dp"
-            android:layout_below="@id/Password"
             android:layout_marginTop="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginHorizontal="110dp"
             android:text="Sign Up"
             android:textStyle="bold"
             android:textColor="#50C2C9"
             android:background="@drawable/white_box"/>
 
-        <TextView
-            android:id="@+id/sign_up"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Already have an account?"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="17dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="100dp"/>
+            android:orientation="horizontal"
+            android:layout_marginBottom="17dp">
 
-        <TextView
+            <TextView
+                android:id="@+id/sign_up"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Already have an account?"
+                android:textColor="@android:color/white"
+                android:textSize="14sp"
+                android:layout_marginLeft="100dp"/>
 
-            android:id="@+id/log_in_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/log_in"
-            android:textColor="#157177"
-            android:textSize="14sp"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/sign_up"
-            android:layout_marginBottom="17dp"
-            android:layout_marginLeft="10dp"/>
+            <TextView
+                android:id="@+id/log_in_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/log_in"
+                android:textColor="#157177"
+                android:textSize="14sp"
+                android:layout_marginLeft="10dp"/>
+        </LinearLayout>
 
-    </RelativeLayout>
 
+    </LinearLayout>
 
 
 
