--- a/app/src/main/res/layout/text_chat_page.xml
+++ b/app/src/main/res/layout/text_chat_page.xml
@@ -116,7 +116,7 @@
                 android:layout_width="50dp"
                 android:layout_height="70dp"
                 android:layout_marginLeft="18dp"
-                android:src="#7E1717" />
+                android:src="@drawable/john1" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -204,7 +204,7 @@
                 android:layout_width="50dp"
                 android:layout_height="70dp"
                 android:layout_marginLeft="18dp"
-                android:src="#7E1717" />
+                android:src="@drawable/john1" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
