--- a/app/src/main/res/layout/add_mentor_page.xml
+++ b/app/src/main/res/layout/add_mentor_page.xml
@@ -248,6 +248,7 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:id="@+id/home_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -284,6 +285,7 @@
                 android:layout_gravity="center">
 
                 <ImageView
+                    android:id="@+id/search_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -322,6 +324,7 @@
                 android:layout_gravity="center">
 
                 <ImageView
+                    android:id="@+id/chat_link"
                     android:layout_width="35dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -357,6 +360,7 @@
                 android:layout_gravity="center">
 
                 <ImageView
+                    android:id="@+id/person_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
