--- a/app/src/main/res/layout/chat_page.xml
+++ b/app/src/main/res/layout/chat_page.xml
@@ -230,6 +230,7 @@
             android:paddingTop="10dp"/>
 
         <LinearLayout
+            android:id="@+id/John_Text"
             android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_gravity="center_vertical"
@@ -382,6 +383,7 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:id="@+id/home_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -418,6 +420,7 @@
                 android:layout_gravity="center">
 
                 <ImageView
+                    android:id="@+id/search_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -491,6 +494,7 @@
                 android:layout_gravity="center">
 
                 <ImageView
+                    android:id="@+id/person_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
