--- a/app/src/main/res/layout/calling_interface_page.xml
+++ b/app/src/main/res/layout/calling_interface_page.xml
@@ -147,6 +147,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/close_call"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|center_horizontal"
