--- a/app/src/main/res/layout/community_chat_page.xml
+++ b/app/src/main/res/layout/community_chat_page.xml
@@ -34,6 +34,7 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/call_btn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/call_icon"
@@ -41,6 +42,7 @@
                 />
 
             <TextView
+                android:id="@+id/video_call_btn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/video_icon_white"
@@ -382,6 +384,7 @@ mentorship? Satisfied??"
                 android:layout_weight="1">
 
                 <ImageView
+                    android:id="@+id/home_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -418,6 +421,7 @@ mentorship? Satisfied??"
                 android:layout_gravity="center">
 
                 <ImageView
+                    android:id="@+id/search_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -491,6 +495,7 @@ mentorship? Satisfied??"
                 android:layout_gravity="center">
 
                 <ImageView
+                    android:id="@+id/person_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
