--- a/app/src/main/res/layout/edit_profile_page.xml
+++ b/app/src/main/res/layout/edit_profile_page.xml
@@ -15,6 +15,7 @@
 
 
         <TextView
+            android:id="@+id/back_arrow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Edit Profile"
