--- a/app/src/main/res/layout/photo_camera_page.xml
+++ b/app/src/main/res/layout/photo_camera_page.xml
@@ -23,6 +23,7 @@
         android:background="#CBCBCB">
 
         <TextView
+            android:id="@+id/back_arrow"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:background="@drawable/close_icon"
