--- a/app/src/main/res/layout/review_page.xml
+++ b/app/src/main/res/layout/review_page.xml
@@ -17,6 +17,7 @@
 
 
         <TextView
+            android:id="@+id/back_arrow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#147076"
