--- a/app/src/main/res/layout/review_page.xml
+++ b/app/src/main/res/layout/review_page.xml
@@ -12,8 +12,7 @@
         android:id="@+id/header_top"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="#50C2C9"
-        android:layout_alignBot="@+id/display_cover">
+        android:background="#50C2C9">
 
 
         <TextView
