--- a/app/src/main/res/layout/add_mentor_page.xml
+++ b/app/src/main/res/layout/add_mentor_page.xml
@@ -244,7 +244,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
-                <ImageView
+                <TextView
                     android:id="@+id/home_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -281,7 +281,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/search_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -320,7 +320,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/chat_link"
                     android:layout_width="35dp"
                     android:layout_height="40dp"
@@ -356,7 +356,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/person_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
