--- a/app/src/main/res/layout/chat_page.xml
+++ b/app/src/main/res/layout/chat_page.xml
@@ -382,7 +382,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
-                <ImageView
+                <TextView
                     android:id="@+id/home_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -419,7 +419,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/search_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -458,7 +458,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:layout_width="35dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -493,7 +493,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/person_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
