--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -667,7 +667,7 @@ again."
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
-                <ImageView
+                <TextView
                     android:id="@+id/home_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -704,7 +704,7 @@ again."
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/search_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -743,7 +743,7 @@ again."
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/chat_link"
                     android:layout_width="35dp"
                     android:layout_height="40dp"
@@ -779,7 +779,7 @@ again."
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/person_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
