--- a/app/src/main/res/layout/text_chat_page.xml
+++ b/app/src/main/res/layout/text_chat_page.xml
@@ -318,7 +318,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
-                <ImageView
+                <TextView
                     android:id="@+id/home_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -355,7 +355,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/search_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -394,7 +394,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:layout_width="35dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
@@ -429,7 +429,7 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
 
-                <ImageView
+                <TextView
                     android:id="@+id/person_link"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
