--- a/app/src/main/res/layout/registration_page.xml
+++ b/app/src/main/res/layout/registration_page.xml
@@ -37,199 +37,205 @@
 
     </RelativeLayout>
 
-
-    <LinearLayout
-        android:id="@+id/login_bar"
-        android:layout_width="match_parent"
+    <ScrollView
         android:layout_below="@+id/header"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/blue_box">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/Starting_text"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:text="Get Started!"
-            android:textColor="@android:color/white"
-            android:background="#50C2C9"
-            android:textStyle="bold"
-            android:textSize="35sp"
-            android:layout_marginLeft="25dp"/>
-
-        <TextView
-            android:id="@+id/name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="Name"
-            android:textColor="@android:color/white"
-            android:background="#50C2C9"
-            android:textSize="15sp"
-            android:layout_marginLeft="25dp"/>
-
-        <EditText
-            android:id="@+id/Name"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="25dp"
-            android:background="@drawable/white_box"
-            android:hint="Enter Name"
-            android:textColorHint="#918B8B"
-            android:paddingLeft="20dp"
-            android:inputType="text"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/email_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="Email"
-            android:textColor="@android:color/white"
-            android:background="#50C2C9"
-            android:textSize="15sp"
-            android:layout_marginLeft="25dp"/>
-
-        <EditText
-            android:id="@+id/Email"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="25dp"
-            android:background="@drawable/white_box"
-            android:hint="Enter Email"
-            android:textColorHint="#918B8B"
-            android:paddingLeft="20dp"
-            android:inputType="text"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/contact_no_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="Contact Number"
-            android:textColor="@android:color/white"
-            android:background="#50C2C9"
-            android:textSize="15sp"
-            android:layout_marginLeft="25dp"/>
-
-        <EditText
-            android:id="@+id/Contact_No"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="25dp"
-            android:background="@drawable/white_box"
-            android:hint="Enter Contact Number"
-            android:textColorHint="#918B8B"
-            android:paddingLeft="20dp"
-            android:inputType="text"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/country_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="Country"
-            android:textColor="@android:color/white"
-            android:background="#50C2C9"
-            android:textSize="15sp"
-            android:layout_marginLeft="25dp"/>
-
-        <EditText
-            android:id="@+id/Country"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="25dp"
-            android:background="@drawable/white_box"
-            android:hint="Select Country"
-            android:textColorHint="#918B8B"
-            android:paddingLeft="20dp"
-            android:drawableRight="@drawable/dropdown_arrow"
-            android:paddingRight="10dp"
-            android:inputType="text"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/city_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="Country"
-            android:textColor="@android:color/white"
-            android:background="#50C2C9"
-            android:textSize="15sp"
-            android:layout_marginLeft="25dp"/>
-
-        <EditText
-            android:id="@+id/City"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="25dp"
-            android:background="@drawable/white_box"
-            android:hint="Select City"
-            android:textColorHint="#918B8B"
-            android:paddingLeft="20dp"
-            android:drawableRight="@drawable/dropdown_arrow"
-            android:paddingRight="10dp"
-            android:inputType="text"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#FFFFFF" />
-
-
-        <!-- Repeat similar blocks for other fields -->
-
-        <Button
-            android:id="@+id/Sign_up_btn"
-            android:layout_width="180dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginHorizontal="110dp"
-            android:text="Sign Up"
-            android:textStyle="bold"
-            android:textColor="#50C2C9"
-            android:background="@drawable/white_box"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="17dp">
+            android:id="@+id/login_bar"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/header"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@drawable/blue_box">
 
             <TextView
-                android:id="@+id/sign_up"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Already have an account?"
+                android:id="@+id/Starting_text"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:text="Get Started!"
                 android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:layout_marginLeft="100dp"/>
+                android:background="#50C2C9"
+                android:textStyle="bold"
+                android:textSize="35sp"
+                android:layout_marginLeft="25dp"/>
 
             <TextView
-                android:id="@+id/log_in_link"
+                android:id="@+id/name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/log_in"
-                android:textColor="#157177"
-                android:textSize="14sp"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginTop="25dp"
+                android:text="Name"
+                android:textColor="@android:color/white"
+                android:background="#50C2C9"
+                android:textSize="15sp"
+                android:layout_marginLeft="25dp"/>
+
+            <EditText
+                android:id="@+id/Name"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="25dp"
+                android:background="@drawable/white_box"
+                android:hint="Enter Name"
+                android:textColorHint="#918B8B"
+                android:paddingLeft="20dp"
+                android:inputType="text"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/email_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Email"
+                android:textColor="@android:color/white"
+                android:background="#50C2C9"
+                android:textSize="15sp"
+                android:layout_marginLeft="25dp"/>
+
+            <EditText
+                android:id="@+id/Email"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="25dp"
+                android:background="@drawable/white_box"
+                android:hint="Enter Email"
+                android:textColorHint="#918B8B"
+                android:paddingLeft="20dp"
+                android:inputType="text"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/contact_no_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Contact Number"
+                android:textColor="@android:color/white"
+                android:background="#50C2C9"
+                android:textSize="15sp"
+                android:layout_marginLeft="25dp"/>
+
+            <EditText
+                android:id="@+id/Contact_No"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="25dp"
+                android:background="@drawable/white_box"
+                android:hint="Enter Contact Number"
+                android:textColorHint="#918B8B"
+                android:paddingLeft="20dp"
+                android:inputType="text"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/country_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Country"
+                android:textColor="@android:color/white"
+                android:background="#50C2C9"
+                android:textSize="15sp"
+                android:layout_marginLeft="25dp"/>
+
+            <EditText
+                android:id="@+id/Country"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="25dp"
+                android:background="@drawable/white_box"
+                android:hint="Select Country"
+                android:textColorHint="#918B8B"
+                android:paddingLeft="20dp"
+                android:drawableRight="@drawable/dropdown_arrow"
+                android:paddingRight="10dp"
+                android:inputType="text"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/city_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Country"
+                android:textColor="@android:color/white"
+                android:background="#50C2C9"
+                android:textSize="15sp"
+                android:layout_marginLeft="25dp"/>
+
+            <EditText
+                android:id="@+id/City"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="25dp"
+                android:background="@drawable/white_box"
+                android:hint="Select City"
+                android:textColorHint="#918B8B"
+                android:paddingLeft="20dp"
+                android:drawableRight="@drawable/dropdown_arrow"
+                android:paddingRight="10dp"
+                android:inputType="text"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#FFFFFF" />
+
+
+            <!-- Repeat similar blocks for other fields -->
+
+            <Button
+                android:id="@+id/Sign_up_btn"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginHorizontal="110dp"
+                android:text="Sign Up"
+                android:textStyle="bold"
+                android:textColor="#50C2C9"
+                android:background="@drawable/white_box"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="17dp">
+
+                <TextView
+                    android:id="@+id/sign_up"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Already have an account?"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="100dp"/>
+
+                <TextView
+                    android:id="@+id/log_in_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/log_in"
+                    android:textColor="#157177"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="10dp"/>
+            </LinearLayout>
+
+
         </LinearLayout>
 
 
-    </LinearLayout>
-
-
+    </ScrollView>
 
 </RelativeLayout>
 
