--- a/app/src/main/res/layout/main_menu_page.xml
+++ b/app/src/main/res/layout/main_menu_page.xml
@@ -293,7 +293,7 @@
                 android:textColor="@color/black"
                 android:layout_marginLeft="5dp"
                 android:layout_gravity=""
-                android:background="@drawable/grey_box">
+                android:background="@drawable/john1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -312,6 +312,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/john"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="John Cooper
